force-app/main/default/objects/Contact/fields/msf_LTVScore__c.field-meta.xml
<CustomField>
    <fullName>msf_LTVScore__c</fullName>
    <formula>if(msf_LTVCont__c&lt;0.1, 0, 
if(msf_LTVCont__c&lt;50, 1, 
if(msf_LTVCont__c&lt;100, 2, 
if(msf_LTVCont__c&lt;120, 3, 
if(msf_LTVCont__c&lt;180, 4, 
if(msf_LTVCont__c&lt;500, 5, 
if(msf_LTVCont__c&lt;1000, 6, 
if(msf_LTVCont__c&lt;3000, 7, 
if(msf_LTVCont__c&lt;10000, 8, 
if(msf_LTVCont__c&gt;=10000, 9, 0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime value (punt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>