force-app/main/default/objects/Contact/fields/msf_MailingCityBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingCityBackup__c</fullName>
    <label>Población (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>