force-app/main/default/objects/Contact/fields/msf_MailingCountryBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingCountryBackup__c</fullName>
    <label>País (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>