force-app/main/default/objects/Contact/fields/msf_MailingPostalCodeBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingPostalCodeBackup__c</fullName>
    <label>Código Postal dirección principal (Backu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>