force-app/main/default/objects/Contact/fields/msf_MailingStateBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingStateBackup__c</fullName>
    <label>Provincia (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>