force-app/main/default/objects/Contact/fields/msf_MailingStreetBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingStreetBackup__c</fullName>
    <label>Calle de dirección principal (Backup)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>