force-app/main/default/objects/Contact/fields/msf_MainEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_MainEmail__c</fullName>
    <label>Email principal</label>
    <type>Email</type>
</CustomField>