force-app/main/default/objects/Contact/fields/msf_MainEmailBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MainEmailBackup__c</fullName>
    <label>Email principal (Backup)</label>
    <type>Email</type>
</CustomField>