force-app/main/default/objects/Contact/fields/msf_MaximumDonorValue__c.field-meta.xml
<CustomField>
    <fullName>msf_MaximumDonorValue__c</fullName>
    <label>Valor máximo de donativo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>