force-app/main/default/objects/Contact/fields/msf_MemberType__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberType__c</fullName>
    <defaultValue>&apos;Nada&apos;</defaultValue>
    <label>Tipo de miembro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>