force-app/main/default/objects/Contact/fields/msf_MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>msf_MobilePhone2__c</fullName>
    <label>Móvil secundario</label>
    <type>Phone</type>
</CustomField>