force-app/main/default/objects/Contact/fields/msf_MobilePhone2Backup__c.field-meta.xml
<CustomField>
    <fullName>msf_MobilePhone2Backup__c</fullName>
    <label>Móvil secundario (Backup)</label>
    <type>Phone</type>
</CustomField>