force-app/main/default/objects/Contact/fields/msf_MobilePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_MobilePhoneBackup__c</fullName>
    <label>Móvil Principal (Backup)</label>
    <type>Phone</type>
</CustomField>