force-app/main/default/objects/Contact/fields/msf_MobilePhonePrefixEsp__c.field-meta.xml
<CustomField>
    <fullName>msf_MobilePhonePrefixEsp__c</fullName>
    <label>Móvil Principal PrefixEsp</label>
    <type>Phone</type>
</CustomField>