force-app/main/default/objects/Contact/fields/msf_ModificationChannel__c.field-meta.xml
<CustomField>
    <fullName>msf_ModificationChannel__c</fullName>
    <inlineHelpText>Es obligatorio informar este campo cada vez que modifique el registro. Tras guardar los cambios el campo queda vacío para la próxima modificación.</inlineHelpText>
    <label>Canal de modificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ModificationChannel</valueSetName>
    </valueSet>
</CustomField>