force-app/main/default/objects/Contact/fields/msf_NextLevelCheck__c.field-meta.xml
<CustomField>
    <fullName>msf_NextLevelCheck__c</fullName>
    <label>Próxima comprobación level</label>
    <type>Date</type>
</CustomField>