force-app/main/default/objects/Contact/fields/msf_NextMemberTypeCheck__c.field-meta.xml
<CustomField>
    <fullName>msf_NextMemberTypeCheck__c</fullName>
    <label>Próxima comprobación tipo de miembro</label>
    <type>Date</type>
</CustomField>