force-app/main/default/objects/Contact/fields/msf_Nickname__c.field-meta.xml
<CustomField>
    <fullName>msf_Nickname__c</fullName>
    <inlineHelpText>Nombre que quiere ser tratado, las cartas empezaran por Hola &lt;apodo&gt;</inlineHelpText>
    <label>Apodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>