force-app/main/default/objects/Contact/fields/msf_NIF__c.field-meta.xml
<CustomField>
    <fullName>msf_NIF__c</fullName>
    <label>NIF/NIE/CIF</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>