force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No agradecimientos papel</label>
    <type>Checkbox</type>
</CustomField>