force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosDonativosEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosDonativosEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No agradecimientos donativos email</label>
    <type>Checkbox</type>
</CustomField>