force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosDonativosPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosDonativosPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No agradecimientos donativos papel</label>
    <type>Checkbox</type>
</CustomField>