force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosDonativosSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosDonativosSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No agradecimientos donativos SMS</label>
    <type>Checkbox</type>
</CustomField>