force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosDonativosTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosDonativosTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No agradecimientos donativos teléf</label>
    <type>Checkbox</type>
</CustomField>