force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No agradecimientos por email</label>
    <type>Checkbox</type>
</CustomField>