force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C  No agradecimientos por MI</label>
    <type>Checkbox</type>
</CustomField>