force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No agradecimientos por SMS</label>
    <type>Checkbox</type>
</CustomField>