force-app/main/default/objects/Contact/fields/msf_NoAgradecimientosTelefono__c.field-meta.xml
<CustomField>
    <fullName>msf_NoAgradecimientosTelefono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No agradecimientos por teléfono</label>
    <type>Checkbox</type>
</CustomField>