force-app/main/default/objects/Contact/fields/msf_NoCaptacionFondos__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCaptacionFondos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No captación de fondos</label>
    <type>Checkbox</type>
</CustomField>