force-app/main/default/objects/Contact/fields/msf_NoCaptacionFondosCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCaptacionFondosCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No captación de fondos papel</label>
    <type>Checkbox</type>
</CustomField>