force-app/main/default/objects/Contact/fields/msf_NoCaptacionFondosEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCaptacionFondosEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No captación de fondos por email</label>
    <type>Checkbox</type>
</CustomField>