force-app/main/default/objects/Contact/fields/msf_NoCaptacionFondosMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCaptacionFondosMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No captación de fondos por MI</label>
    <type>Checkbox</type>
</CustomField>