force-app/main/default/objects/Contact/fields/msf_NoCaptacionFondosSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCaptacionFondosSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No captación de fondos por SMS</label>
    <type>Checkbox</type>
</CustomField>