force-app/main/default/objects/Contact/fields/msf_NoCartasPlanRelacionCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCartasPlanRelacionCP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These fields are the different types of the communication plan</description>
    <label>P.C. No cartas del plan de relación pape</label>
    <type>Checkbox</type>
</CustomField>