force-app/main/default/objects/Contact/fields/msf_NoCertificadoFiscalCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCertificadoFiscalCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No certificado fiscal papel</label>
    <type>Checkbox</type>
</CustomField>