force-app/main/default/objects/Contact/fields/msf_NoCertificadoFiscalEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCertificadoFiscalEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No certificado fiscal por email</label>
    <type>Checkbox</type>
</CustomField>