force-app/main/default/objects/Contact/fields/msf_NoCertificadoFiscalMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCertificadoFiscalMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No certificado fiscal por MI</label>
    <type>Checkbox</type>
</CustomField>