force-app/main/default/objects/Contact/fields/msf_NoCertificadoFiscalSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCertificadoFiscalSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No certificado fiscal por SMS</label>
    <type>Checkbox</type>
</CustomField>