force-app/main/default/objects/Contact/fields/msf_NoCesionImagenPromocion__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCesionImagenPromocion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No cesión de imagen promoción</label>
    <type>Checkbox</type>
</CustomField>