force-app/main/default/objects/Contact/fields/msf_NoComunicacionesOnetoOneCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoComunicacionesOnetoOneCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No comunicaciones One to One papel</label>
    <type>Checkbox</type>
</CustomField>