force-app/main/default/objects/Contact/fields/msf_NoComunicacionesOnetoOneEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoComunicacionesOnetoOneEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No comunicaciones One to One email</label>
    <type>Checkbox</type>
</CustomField>