force-app/main/default/objects/Contact/fields/msf_NoComunicacionesOnetoOneTelefono__c.field-meta.xml
<CustomField>
    <fullName>msf_NoComunicacionesOnetoOneTelefono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No comunicaciones OneToOne teléfono</label>
    <type>Checkbox</type>
</CustomField>