force-app/main/default/objects/Contact/fields/msf_NoComunicaconesOnetoOneMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoComunicaconesOnetoOneMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No comunicaciones One to One MI</label>
    <type>Checkbox</type>
</CustomField>