force-app/main/default/objects/Contact/fields/msf_NoComunicaconesOnetoOneSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoComunicaconesOnetoOneSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No comunicaciones One to One SMS</label>
    <type>Checkbox</type>
</CustomField>