force-app/main/default/objects/Contact/fields/msf_NoCorreoPostal__c.field-meta.xml
<CustomField>
    <fullName>msf_NoCorreoPostal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No correo postal</label>
    <type>Checkbox</type>
</CustomField>