force-app/main/default/objects/Contact/fields/msf_NoDiciembreEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoDiciembreEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. diciembre email</label>
    <type>Checkbox</type>
</CustomField>