force-app/main/default/objects/Contact/fields/msf_NoDiciembrePapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoDiciembrePapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. diciembre papel</label>
    <type>Checkbox</type>
</CustomField>