force-app/main/default/objects/Contact/fields/msf_NoDiciembreTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoDiciembreTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. diciembre teléfono</label>
    <type>Checkbox</type>
</CustomField>