force-app/main/default/objects/Contact/fields/msf_NoEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No email</label>
    <type>Checkbox</type>
</CustomField>