force-app/main/default/objects/Contact/fields/msf_NoEmailingsTematicosEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEmailingsTematicosEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No emailings temáticos por email</label>
    <type>Checkbox</type>
</CustomField>