force-app/main/default/objects/Contact/fields/msf_NoEncuestasEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEncuestasEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No encuestas email</label>
    <type>Checkbox</type>
</CustomField>