force-app/main/default/objects/Contact/fields/msf_NoEncuestasPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEncuestasPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No encuestas papel</label>
    <type>Checkbox</type>
</CustomField>