force-app/main/default/objects/Contact/fields/msf_NoEncuestasTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEncuestasTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No encuestas teléfono</label>
    <type>Checkbox</type>
</CustomField>