force-app/main/default/objects/Contact/fields/msf_NoEspMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEspMobilePhone__c</fullName>
    <label>Móvil no español</label>
    <type>Phone</type>
</CustomField>