force-app/main/default/objects/Contact/fields/msf_NoEspMobilePhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEspMobilePhoneBackup__c</fullName>
    <label>Móvil no Español (Backup)</label>
    <type>Phone</type>
</CustomField>