force-app/main/default/objects/Contact/fields/msf_NoEspPhone__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEspPhone__c</fullName>
    <label>Fijo no español</label>
    <type>Phone</type>
</CustomField>