force-app/main/default/objects/Contact/fields/msf_NoEspPhoneBackup__c.field-meta.xml
<CustomField>
    <fullName>msf_NoEspPhoneBackup__c</fullName>
    <label>Fijo no Español (Backup)</label>
    <type>Phone</type>
</CustomField>