force-app/main/default/objects/Contact/fields/msf_NoFiscalEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoFiscalEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. fiscal email</label>
    <type>Checkbox</type>
</CustomField>