force-app/main/default/objects/Contact/fields/msf_NoFiscalPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoFiscalPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. fiscal papel</label>
    <type>Checkbox</type>
</CustomField>