force-app/main/default/objects/Contact/fields/msf_NoFiscalTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoFiscalTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. fiscal teléfono</label>
    <type>Checkbox</type>
</CustomField>