force-app/main/default/objects/Contact/fields/msf_NoInformacionTestamentaria__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInformacionTestamentaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No información testamentaria</label>
    <type>Checkbox</type>
</CustomField>