force-app/main/default/objects/Contact/fields/msf_NoInformeEmpresasEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInformeEmpresasEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No informe empresas email</label>
    <type>Checkbox</type>
</CustomField>