force-app/main/default/objects/Contact/fields/msf_NoInformeEmpresasPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInformeEmpresasPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No informe empresas papel</label>
    <type>Checkbox</type>
</CustomField>