force-app/main/default/objects/Contact/fields/msf_NoInformeEmpresasSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInformeEmpresasSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No informe empresas SMS</label>
    <type>Checkbox</type>
</CustomField>