force-app/main/default/objects/Contact/fields/msf_NoInformeEmpresasTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInformeEmpresasTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No informe empresas teléfono</label>
    <type>Checkbox</type>
</CustomField>