force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No invitaciones eventos papel</label>
    <type>Checkbox</type>
</CustomField>