force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No invitaciones eventos por email</label>
    <type>Checkbox</type>
</CustomField>