force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No invitaciones eventos email</label>
    <type>Checkbox</type>
</CustomField>