force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No invitación a eventos por MI</label>
    <type>Checkbox</type>
</CustomField>