force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No invitaciones eventos papel</label>
    <type>Checkbox</type>
</CustomField>