force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No invitaciones eventos por SMS</label>
    <type>Checkbox</type>
</CustomField>