force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No invitaciones eventos SMS</label>
    <type>Checkbox</type>
</CustomField>