force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosTelefono__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosTelefono__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No invitaciones eventos por teléf</label>
    <type>Checkbox</type>
</CustomField>