force-app/main/default/objects/Contact/fields/msf_NoInvitacionesEventosTelefonolEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoInvitacionesEventosTelefonolEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No invitaciones eventos teléfono</label>
    <type>Checkbox</type>
</CustomField>