force-app/main/default/objects/Contact/fields/msf_NoJunioEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoJunioEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. junio email</label>
    <type>Checkbox</type>
</CustomField>