force-app/main/default/objects/Contact/fields/msf_NoJunioPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoJunioPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. junio papel</label>
    <type>Checkbox</type>
</CustomField>