force-app/main/default/objects/Contact/fields/msf_NoJunioTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoJunioTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No campaña trim. junio teléfono</label>
    <type>Checkbox</type>
</CustomField>