force-app/main/default/objects/Contact/fields/msf_NoLlamadasBienvenidasEncuestasOtras__c.field-meta.xml
<CustomField>
    <fullName>msf_NoLlamadasBienvenidasEncuestasOtras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No encuestas/Estu. Mer./Conc. papel</label>
    <type>Checkbox</type>
</CustomField>