force-app/main/default/objects/Contact/fields/msf_NoMailingsTematicosCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMailingsTematicosCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No mailings temáticos papel</label>
    <type>Checkbox</type>
</CustomField>