force-app/main/default/objects/Contact/fields/msf_NoMailingUpgradeEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMailingUpgradeEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No mailing upgrade email</label>
    <type>Checkbox</type>
</CustomField>