force-app/main/default/objects/Contact/fields/msf_NoMailingUpgradePapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMailingUpgradePapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No mailing upgrade papel</label>
    <type>Checkbox</type>
</CustomField>