force-app/main/default/objects/Contact/fields/msf_NoMailingUpgradeSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMailingUpgradeSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No mailing upgrade SMS</label>
    <type>Checkbox</type>
</CustomField>