force-app/main/default/objects/Contact/fields/msf_NoMailingUpgradeTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMailingUpgradeTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No mailing upgrade teléfono</label>
    <type>Checkbox</type>
</CustomField>