force-app/main/default/objects/Contact/fields/msf_NombreDireccion_Concat__c.field-meta.xml
<CustomField>
    <fullName>msf_NombreDireccion_Concat__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot; &quot; &amp;  MailingStreet &amp; &quot; &quot; &amp;   MailingPostalCode &amp; &quot; &quot; &amp;   MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Direccion Concat</label>
    <type>Text</type>
</CustomField>