force-app/main/default/objects/Contact/fields/msf_NoMemoriaCP__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriaCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No memoria papel</label>
    <type>Checkbox</type>
</CustomField>