force-app/main/default/objects/Contact/fields/msf_NoMemoriaEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriaEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No memoria por email</label>
    <type>Checkbox</type>
</CustomField>