force-app/main/default/objects/Contact/fields/msf_NoMemoriaMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriaMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No memoria por MI</label>
    <type>Checkbox</type>
</CustomField>