force-app/main/default/objects/Contact/fields/msf_NoMemoriasEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriasEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No memorias email</label>
    <type>Checkbox</type>
</CustomField>