force-app/main/default/objects/Contact/fields/msf_NoMemoriaSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriaSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No memoria por SMS</label>
    <type>Checkbox</type>
</CustomField>