force-app/main/default/objects/Contact/fields/msf_NoMemoriasPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMemoriasPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No memorias papel</label>
    <type>Checkbox</type>
</CustomField>