force-app/main/default/objects/Contact/fields/msf_NoMensajesPlanRelacionMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMensajesPlanRelacionMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No plan de relación por MI</label>
    <type>Checkbox</type>
</CustomField>