force-app/main/default/objects/Contact/fields/msf_NoMensajesPlanRelacionSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMensajesPlanRelacionSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No mensajes plan de relación SMS</label>
    <type>Checkbox</type>
</CustomField>