force-app/main/default/objects/Contact/fields/msf_NoMensajesTematicosMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMensajesTematicosMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No mensajes temáticos por MI</label>
    <type>Checkbox</type>
</CustomField>