force-app/main/default/objects/Contact/fields/msf_NoMensajesTematicosSms__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMensajesTematicosSms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No mensajes temáticos por SMS</label>
    <type>Checkbox</type>
</CustomField>