force-app/main/default/objects/Contact/fields/msf_NoMi__c.field-meta.xml
<CustomField>
    <fullName>msf_NoMi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No mensajería instantánea</label>
    <type>Checkbox</type>
</CustomField>