force-app/main/default/objects/Contact/fields/msf_NoNavidadPersonalizadaEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoNavidadPersonalizadaEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No navidad personalizada email</label>
    <type>Checkbox</type>
</CustomField>