force-app/main/default/objects/Contact/fields/msf_NoNavidadPersonalizadaPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoNavidadPersonalizadaPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No navidad personalizada papel</label>
    <type>Checkbox</type>
</CustomField>