force-app/main/default/objects/Contact/fields/msf_NoNavidadPersonalizadaTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoNavidadPersonalizadaTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No navidad personalizada teléfono</label>
    <type>Checkbox</type>
</CustomField>