force-app/main/default/objects/Contact/fields/msf_NoNewsletOrAgradeOrPRelaEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoNewsletOrAgradeOrPRelaEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No newsletter, agra., plan rel. email</label>
    <type>Checkbox</type>
</CustomField>