force-app/main/default/objects/Contact/fields/msf_NoNewsletterEmail__c.field-meta.xml
<CustomField>
    <fullName>msf_NoNewsletterEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.C. No newsletter por email</label>
    <type>Checkbox</type>
</CustomField>