force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptMasivaEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptMasivaEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. mas. Email</label>
    <type>Checkbox</type>
</CustomField>