force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptMasivaPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptMasivaPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. mas. Papel</label>
    <type>Checkbox</type>
</CustomField>