force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptMasivaSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptMasivaSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. mas. SMS</label>
    <type>Checkbox</type>
</CustomField>