force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptMasivaTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptMasivaTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. mas. Teléfo</label>
    <type>Checkbox</type>
</CustomField>