force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptPersEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptPersEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. pers. email</label>
    <type>Checkbox</type>
</CustomField>