force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptPersPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptPersPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. pers. papel</label>
    <type>Checkbox</type>
</CustomField>