force-app/main/default/objects/Contact/fields/msf_NoOtrasCampanasCaptPersTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCampanasCaptPersTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras campañas capt. pers. teléf</label>
    <type>Checkbox</type>
</CustomField>