force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionMasivaEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionMasivaEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación masiva email</label>
    <type>Checkbox</type>
</CustomField>