force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionMasivaPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionMasivaPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación masiva papel</label>
    <type>Checkbox</type>
</CustomField>