force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionMasivaSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionMasivaSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación masiva SMS</label>
    <type>Checkbox</type>
</CustomField>