force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionMasivaTelefonoEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionMasivaTelefonoEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación masiva teléf</label>
    <type>Checkbox</type>
</CustomField>