force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionPersonalEmailEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionPersonalEmailEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación pers. Email</label>
    <type>Checkbox</type>
</CustomField>