force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionPersonalPapelEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionPersonalPapelEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación pers. Papel</label>
    <type>Checkbox</type>
</CustomField>