force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionPersonalPersonalEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionPersonalPersonalEx__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No otras cultivación personalizada personal.</description>
    <label>E.C. No otras cultivación pers. Personal</label>
    <type>Checkbox</type>
</CustomField>