force-app/main/default/objects/Contact/fields/msf_NoOtrasCultivacionPersonalSMSEx__c.field-meta.xml
<CustomField>
    <fullName>msf_NoOtrasCultivacionPersonalSMSEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E.C. No otras cultivación pers. SMS</label>
    <type>Checkbox</type>
</CustomField>